--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: comies
-description: A new Flutter project.
+description: Comies.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -27,14 +27,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.0
-  web_socket_channel: ^2.0.0
+
   path_provider: any
   carousel_slider: ^2.3.1
   sembast: ^2.4.8+1
   sembast_web: '>=1.0.0'
   http: ^0.12.2
-  comies_entities: '1.1.6'
   jwt_decoder: ^1.0.4
   provider: ^4.3.3
   select_form_field: "^1.1.0"
