--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   jwt_decoder: ^1.0.4
   provider: ^4.3.3
   select_form_field: "^1.1.0"
+  flutter_staggered_grid_view: "0.3.4"
 
 dev_dependencies:
   flutter_test:
